--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-        <title>Лабораторнвя работа 1</title>
-    </head>
-    <body>
-        <h1>Это моя первая html страница</h1>
-        <h1>О себе</h1>
-        <p>Я родился в <b>Самаре</b> в <i>2005</i> году, учился в ЛАП 135 <del>ёу)))</del></p>
-        <h2>Какие фильмы мне нравятся</h2>
-        <ul><li>Список Шиндлера</li>
-            <li>Интерстеллар</li>
-            <li>Пираты карибского моря</li>
-            <li>Гарри Поттер</li>
-            <li>Мстители: Финал</li>
-        </ul>
-        <h2>Какая музыка мне нравится</h2>
-        <ol>
-            <li>Рок</li>
-            <li>Поп</li>
-            <li>Металл</li>
-        </ol>
-        <h2>Как связаться со мной</h2>
-        <a href="https://web.telegram.org/a/#993054213">Телеграмм</a>
-        <a href="https://vk.com/mandreyaskalev">Вк</a>
-        <br>
-        <img src="sobaka.jpeg" alt="Не загрузилось(((" width="400" height="400">
-    </body>
+<html>
+
+<head>
+    <title>Лабораторнвя работа 1</title>
+</head>
+
+<body>
+    <h1>Это моя первая html страница</h1>
+    <h1>О себе</h1>
+    <p>Я родился в <b>Самаре</b> в <i>2005</i> году, учился в ЛАП 135 <del>ёу)))</del></p>
+    <h2>Какие фильмы мне нравятся</h2>
+    <ul>
+        <li>Список Шиндлера</li>
+        <li>Интерстеллар</li>
+        <li>Пираты карибского моря</li>
+        <li>Гарри Поттер</li>
+        <li>Мстители: Финал</li>
+    </ul>
+    <h2>Какая музыка мне нравится</h2>
+    <ol>
+        <li>Рок</li>
+        <li>Поп</li>
+        <li>Металл</li>
+    </ol>
+    <h2>Как связаться со мной</h2>
+    <a href="https://web.telegram.org/a/#993054213">Телеграмм</a>
+    <a href="https://vk.com/mandreyaskalev">Вк</a>
+    <br>
+    <img src="sobaka.jpeg" alt="Не загрузилось(((" width="400" height="400">
+</body>
+
 </html>
