--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="https://web.telegram.org/a/#993054213">Телеграмм</a>
     <a href="https://vk.com/mandreyaskalev">Вк</a>
     <br>
-    <img src="sobaka.jpeg" alt="Не загрузилось(((" width="400" height="400">
+    <img src="images/sobaka.jpeg" alt="Не загрузилось(((" width="400" height="400">
 </body>
 
 </html>
