--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+    <div class="header">
+        <a href="index.html">Основная страница</a>
+        <a href="page2.html">Позицианирование элементов</a>
+    </div>
     <div class="content">
         <div class="content-left">
             <h1>Это моя первая html страница</h1>
@@ -32,7 +36,7 @@
         </div>
 
         <div class="content-right">
-            <img src="images/sobaka.jpeg" alt="Не загрузилось(((">
+            <img src="images/sobaka.jpeg" alt="Не загрузилось(((" class="img0">
         </div>
     </div>
 </body>
