--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Лабораторнвя работа 2</title>
+    <title>Лабораторнвя работа 4</title>
     <link href="style.css" rel="stylesheet" />
 </head>
 
@@ -10,6 +10,7 @@
     <div class="header">
         <a href="index.html">Основная страница</a>
         <a href="page2.html">Позицианирование элементов</a>
+        <a href="table.html">Таблица</a>
     </div>
     <div class="content">
         <div class="content-left">
